--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "express-auth-mongoose-boilerplate",
+  "name": "clothing-api-sun7",
   "version": "1.0.0",
-  "description": "Auth boilerplate for mongoose express using token auth",
+  "description": "sun7 Auth for mongoose express using token auth",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Timm Schoenborn",
+  "author": "sun-7-tech",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
